don't worry about it :^)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="body">
 <div class="wrapper">
 	<div class="header">
-		<a href="#"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
+		<a target="_blank" href="https://www.google.com/search?q=milk&ie=utf-8&oe=utf-8#q=portuguese+for+milk"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
 		<nav class="nav noselect"><ul>
 			<li class="navEl"><a target="_blank" href="https://www.google.com/maps/place/41+Botsford+Ave,+Milford,+CT+06460/@41.1893365,-73.0915363,17z/data=!3m1!4b1!4m2!3m1!1s0x89e80ccc9f0b0b69:0x36f046694681651e">[home]</a></li>
 			<li class="navEl"><a target="_blank" href="resume.html">[resume]</a></li><p class="separate">:|:</p>
