--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 		<p class="button separate-bg"><span id="gen" class="button-real noselect">[generate]</span> 255 words of text</p>
 
-		<p id="random-text" class="">No text has been generated yet, but I'm sure you can figure out how to do it. Feel free to take your time though, no pressure.</p>
+		<p id="random-text" class="fade-in fade-pause">No text has been generated yet, but I'm sure you can figure out how to do it. Feel free to take your time though, no pressure.</p>
 
 	</div>
 </div>
@@ -85,10 +85,10 @@ window.onscroll = (function () {
 	// You also need to make things fade in, so they know you're legit
 	var els = document.getElementsByClassName("fade-in");
 	for (var i = 0; i < els.length; i++) {
-		var el_bot = els[i].getBoundingClientRect().bottom;
-		var win_bot = window.scrollY + window.innerHeight;
+		var el_top = els[i].getBoundingClientRect().top;
+		var win_bot = window.innerHeight;
 
-		if (win_bot >= el_bot) {
+		if (win_bot >= el_top) {
 			if (els[i].classList.contains('fade-pause')){
 				els[i].classList.remove('fade-pause');
 			}
@@ -120,7 +120,6 @@ function smoothScroll(id) {
     }
 
 	// This makes it smooth
-
 	var speed = 10;
     var inc = Math.round(distance / speed); // velocity
     if (inc >= 20){
