--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" type="text/css" href="./style/index.css">
+	
+	<link rel="icon" type="image/png" src="./img/favicon.png">
 
 	<script src="./js/language/gentext.js"></script>
 </head>
