styling for mosaic

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div id="content" class="content">
 		<div class="title-wrapper-small">
 			<div class="title fade-in fade-pause">
-				<p class="h1">This. Is. A. Website.</p>
+				<p class="h1">this is a website.</p>
 			</div>
 		</div>
 		<p class="fade-in fade-pause">This is a website. Well, not really at this point. It'll come along though. Eventually. I even have things to put up, it's just a matter of cleaning everything up. I wouldn't want to be embarassed by sloppy code on my portfolio website, now would I? Anyway, I know I don't have a link here yet, which means you had to use some shenanigans to get here. Something like typing in the URL, or navigating here from my GitHub profile. Maybe you just took the URL from my resume and thought "Hey, <a class="hidden_link" target="_blank" href="http://i.imgur.com/oTDdyJV.jpg">this guy</a> is really cool and <a class="hidden_link" target="_blank" href="http://i.imgur.com/oTDdyJV.jpg">handsome</a>! I wonder what else this <a class="hidden_link" target="_blank" href="http://i.imgur.com/oTDdyJV.jpg">dashing young man</a> has created...". At any rate, you put in effort, real effort, to get here. And what is there to show for it? Nothing. How embarassing for me, right? I really wouldn't want to disappoint you like that. I mean, we only just met! And honestly, I hate to give a bad first impression. So here, I guess I'll give you a sneak peak at something I've been tinkering with.</p>
