--- a/mosaic.html
+++ b/mosaic.html
@@ -14,23 +14,24 @@
 <body class="body plain-bg">
 <div class="wrapper">
 	<div id="header" class="header separate-bg">
-		<a target="_blank" href="https://www.google.com/search?q=milk&ie=utf-8&oe=utf-8#q=portuguese+for+milk"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
+		<a href="index.html"><img src="./img/logo_dark.png" width="32px" height="32px" class="logo"></a>
 		<nav id="nav" class="nav noselect"><ul>
-			<li class="navEl"><a target="" href="index.html">[home]</a></li>
-			<li class="navEl"><a target="" href="resume.html">[resume]</a></li><p class="separate">:|:</p>
-			<li class="navEl"><a target="" href="#">[mosaic]</a></li>
+			<li class="navEl"><a href="index.html">[home]</a></li>
+			<li class="navEl"><a href="resume.html">[resume]</a></li><p class="separate">:|:</p>
+			<li class="navEl"><a href="#">[mosaic]</a></li>
 		</ul></nav>
 	</div>
 	<div id="fake-header"></div>
 	<div class="content">
-		<p class="h3">This is a website.</p>
+		<p class="h1">The automatic mosaic thing</p>
+		<p class="description">This is a program that takes an image and creates a mosaic out of it. It reads in pixel data and makes an educated guess about which color that pixel is. It then uses that information to construct an HTML table where each cell is representative of a pixel. All photos are either taken by me or of me, so hopefully no one gets mad about copyright. As of right now, you can't make a mosaic from an arbitrary image's url (for security reasons) or upload images (for github.io reasons), so hopefully my beautiful photography is good enough for you.</p>
 
 		<div class="mosaic-wrapper">
-			<div id="sources-left" class="sources"></div>
+			<div id="sources-left" class="sources noselect"></div>
 			<div id="mosaic">
 				<table id="mosaic-canvas"></table>
 			</div>
-			<div id="sources-right" class="sources"></div>
+			<div id="sources-right" class="sources noselect"></div>
 		</div>
 	</div>
 
