fixed resume links

--- a/mosaic.html
+++ b/mosaic.html
@@ -17,7 +17,7 @@
 		<a href="index.html"><img src="./img/logo_dark.png" width="32px" height="32px" class="logo"></a>
 		<nav id="nav" class="nav noselect"><ul>
 			<li class="navEl"><a href="index.html">[home]</a></li>
-			<li class="navEl"><a href="resume.html">[resume]</a></li><p class="separate">:|:</p>
+			<li class="navEl"><a target="_blank" href="resume.html">[resume]</a></li><p class="separate">:|:</p>
 			<li class="navEl"><a href="#">[mosaic]</a></li>
 		</ul></nav>
 	</div>
