--- a/evolution.html
+++ b/evolution.html
@@ -32,7 +32,7 @@
 		<a  href="index.html"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
 		<nav class="nav noselect"><ul>
 			<li class="navEl"><a href="index.html">[home]</a></li>
-			<li class="navEl"><a href="resume.html">[resume]</a></li><p class="separate">:|:</p>
+			<li class="navEl"><a target="_blank" href="resume.html">[resume]</a></li><p class="separate">:|:</p>
 			<li class="navEl"><a href="#">[evolve]</a></li>
 		</ul></nav>
 	</div>
