more mosaic styling

--- a/evolution.html
+++ b/evolution.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" type="text/css" href="./style/evolution.css">
 
+	<link rel="icon" type="image/png" href="./img/favicon.png">
+
 	<!--script src="./js/lib/matter.js" type="text/javascript"></script>
 	<script src="./js/evolution/classes.js" type="text/javascript"></script>
 	<script>
