--- a/mosaic.html
+++ b/mosaic.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="./style/style.css">
 	<link rel="stylesheet" type="text/css" href="./style/mosaic.css">
 
+	<link rel="icon" type="image/png" href="./img/favicon.png">
+
 	<script src="./js/mosaic/processimage.js"></script>
 </head>
 
@@ -24,7 +26,7 @@
 	<div id="fake-header"></div>
 	<div class="content">
 		<p class="h1">The automatic mosaic thing</p>
-		<p class="description">This is a program that takes an image and creates a mosaic out of it. It reads in pixel data and makes an educated guess about which color that pixel is. It then uses that information to construct an HTML table where each cell is representative of a pixel. All photos are either taken by me or of me, so hopefully no one gets mad about copyright. As of right now, you can't make a mosaic from an arbitrary image's url (for security reasons) or upload images (for github.io reasons), so hopefully my beautiful photography is good enough for you.</p>
+		<p class="description">This is a program that takes an image and creates a mosaic out of it. It reads in pixel data and makes an educated guess about which color that pixel is. It then uses that information to construct an HTML table where each cell is representative of a pixel. All photos are either taken by me or of me, so hopefully no one gets mad about copyright. As of right now, you can't make a mosaic from an arbitrary image's url (for <a href="https://www.w3.org/TR/html5/scripting-1.html#security-with-canvas-elements">security reasons</a>) or upload images (for <a href="https://pages.github.com/">github.io reasons</a>), so hopefully my beautiful photography is good enough for you.</p>
 
 		<div class="mosaic-wrapper">
 			<div id="sources-left" class="sources noselect"></div>
