--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<a target="_blank" href="https://www.google.com/search?q=milk&ie=utf-8&oe=utf-8#q=portuguese+for+milk"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
 		<nav id="nav" class="nav noselect"><ul>
 			<li class="navEl"><a href="#">[home]</a></li>
-			<li class="navEl"><a target="_blank" href="resume.html">[resume]</a></li>
+			<li class="navEl"><a target="_blank" href="resume">[resume]</a></li>
 			<li class="navEl"><a target="_blank" href="https://github.com/TylerLeite">[github]</a></li>
 			<li class="navEl"><a target="_blank" href="https://www.youtube.com/watch?v=o-_7Kncw9T0">[linkedin]</a></li><p class="separate">:|:</p>
 			<li class="navEl"><a href="mosaic">[mosaic]</a></li>
