Fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<li class="navEl"><a href="#">[home]</a></li>
 			<li class="navEl"><a target="_blank" href="resume">[resume]</a></li>
 			<li class="navEl"><a target="_blank" href="https://github.com/TylerLeite">[github]</a></li>
-			<li class="navEl"><a target="_blank" href="https://www.youtube.com/watch?v=o-_7Kncw9T0">[linkedin]</a></li><p class="separate">:|:</p>
+			<li class="navEl"><a target="_blank" href="http://linkedin.com/in/tylerleite">[linkedin]</a></li><p class="separate">:|:</p>
 			<li class="navEl"><a href="mosaic">[mosaic]</a></li>
 		</ul></nav>
 	</div>
