--- a/mosaic.html
+++ b/mosaic.html
@@ -16,7 +16,7 @@
 <body class="body plain-bg">
 <div class="wrapper">
 	<div id="header" class="header separate-bg">
-		<a href="index"><img src="./img/logo_dark.png" width="32px" height="32px" class="logo"></a>
+		<a target="_blank" href="https://www.google.com/search?q=milk&ie=utf-8&oe=utf-8#q=portuguese+for+milk"><img src="./img/logo_dark.png" width="32px" height="32px" class="logo"></a>
 		<nav id="nav" class="nav noselect"><ul>
 			<li class="navEl"><a href="index">[home]</a></li>
 			<li class="navEl"><a target="_blank" href="resume">[resume]</a></li><p class="separate">:|:</p>
