--- a/resume.html
+++ b/resume.html
@@ -97,7 +97,7 @@ hr.fullHR {
     <div id="contact"><p> tyler.leite@yandex.com | 41 Botsford Ave, Milford, CT 06460 | (203) 767 - 8573 </p></div>
     <div class="midAlign"><hr class="midHR"></div><br>
 
-    <div class="body"><p>College sophomore majoring in Computer Science with 4+ years of experience programming in many languages both professionally and as a hobby. Comfortable working with a team, both as a member and a leader.</p></div><br>
+    <div class="body"><p>4+ years of experience programming in many languages both professionally and as a hobby. Expert in UI/UX design. Comfortable working with a team, both as a member and a leader.</p></div><br>
 
     <div class="title"><p>Experience</p></div>
     <hr>
@@ -123,8 +123,4 @@ hr.fullHR {
             <li><p>Some experience with MIPS assembly language</p></li>
         </ul>
     </div>
-
-    <div class="title"><p>Education</p></div>
-    <hr>
-    <div class="body"><p>Currently enrolled in Rensselaer Polytechnic Institute working on a B.S in Computer Science, class of 2018</p></div>
 </div></div>
