--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,6 @@ body {
     min-width: 675px;
     /*background: #eee;*/
     overflow-y: scroll;
-
 }
 
 .wrapper {
@@ -118,6 +117,7 @@ hr.fullHR {
             <li><p>4 years of experience with PhP, SQL</p></li>
             <li><p>Proficient in C++, Python, JavaScript</p></li>
             <li><p>Experienced with openGL and SDL</p></li>
+			<li><p>Experienced with JavaScript libraries includeing AngularJS, React, and Backbone</p></li>
             <li><p>Familiar with C, Java, Scheme, C#</p></li>
             <li><p>Familiar with Unity and Multimedia Fusion 2 game engines</p></li>
             <li><p>Some experience with MIPS assembly language</p></li>
