--- a/evolution.html
+++ b/evolution.html
@@ -31,9 +31,9 @@
 <body class="body" onload="init()">
 <div class="wrapper">
 	<div class="header">
-		<a  href="index.html"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
+		<a  href="home"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
 		<nav class="nav noselect"><ul>
-			<li class="navEl"><a href="index.html">[home]</a></li>
+			<li class="navEl"><a href="home">[home]</a></li>
 			<li class="navEl"><a target="_blank" href="resume.html">[resume]</a></li><p class="separate">:|:</p>
 			<li class="navEl"><a href="#">[evolve]</a></li>
 		</ul></nav>
