--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 	<div id="header" class="header separate-bg">
 		<a target="_blank" href="https://www.google.com/search?q=milk&ie=utf-8&oe=utf-8#q=portuguese+for+milk"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
 		<nav id="nav" class="nav noselect"><ul>
-			<li class="navEl"><a href="#">[home]</a></li>
+			<li class="navEl"><a target="_blank" href="index_old">[home]</a></li>
 			<li class="navEl"><a target="_blank" href="resume">[resume]</a></li>
 			<li class="navEl"><a target="_blank" href="https://github.com/TylerLeite">[github]</a></li>
 			<li class="navEl"><a target="_blank" href="http://linkedin.com/in/tylerleite">[linkedin]</a></li><p class="separate">:|:</p>
