--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-window.location = "http://www.tylerleite.github.io/home";
+<!DOCTYPE html >
+<html lang="en">
+	<head>
+		<script>
+			window.location = "http://www.tylerleite.github.io/home";
+		</script>
+	</head>
+</html>
