--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<script>
-			window.location = "http://www.tylerleite.github.io/home";
+			window.location = "http://tylerleite.github.io/home";
 		</script>
 	</head>
 </html>
