--- a/mosaic.html
+++ b/mosaic.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="./style/style-scalable.css">
-	<link rel="stylesheet" type="text/css" href="./style/mosaic-scalable.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/mosaic.css">
 
 	<link rel="icon" type="image/png" href="./img/favicon.png">
 
