--- a/portfolio/atk.mushroom/index.html
+++ b/portfolio/atk.mushroom/index.html
@@ -1,218 +1,192 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="./style/style-scalable.css">
-	<link rel="stylesheet" type="text/css" href="./style/index-scalable.css">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-	<link rel="icon" type="image/png" href="./img/favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-	<script src="./js/language/gentext.js"></script>
-</head>
+    <title>ATK Sustainable Farm</title>
 
-<body class="body plain-bg">
-<div class="wrapper">
-	<div id="header" class="header separate-bg">
-		<a target="_blank" href="https://www.google.com/search?q=milk&ie=utf-8&oe=utf-8#q=portuguese+for+milk"><img src="./img/logo.png" width="32px" height="32px" class="logo"></a>
-		<nav id="nav" class="nav noselect"><ul>
-			<li class="navEl"><a target="_blank" href="https://www.google.com/maps/place/41+Botsford+Ave,+Milford,+CT+06460/@41.1893365,-73.0915363,17z/data=!3m1!4b1!4m2!3m1!1s0x89e80ccc9f0b0b69:0x36f046694681651e">[home]</a></li>
-			<li class="navEl"><a target="_blank" href="resume.html">[resume]</a></li><p class="separate">:|:</p>
-			<li class="navEl"><a target="_blank" href="https://github.com/TylerLeite">[more]</a></li>
-			<li class="navEl"><a target="_blank" href="https://www.youtube.com/watch?v=o-_7Kncw9T0">[to]</a></li>
-			<li class="navEl"><a target="_blank" href="http://www.newgrounds.com/portal/view/562242">[come]</a></li>
-			<li class="navEl small_1"><a target="_blank" href="https://www.facebook.com/tyler.leite.7">[i]</a></li>
-			<li class="navEl small_2"><a target="_blank" href="http://www.gamesetwatch.com/column_at_play/7.php">[swear]</a></li>
-			<li class="navEl small_3"><a target="_blank" href="https://discordapp.com/">[please]</a></li>
-			<li class="navEl small_4"><a target="_blank" href="https://www.youtube.com/watch?v=ZM2-NsvTVDc">[don't]</a></li>
-			<li class="navEl small_5"><a target="_blank" href="https://www.youtube.com/watch?v=QRrer1toZX4">[leave]</a></li>
-			<li class="navEl small_6"><a target="_blank" href="https://www.linkedin.com/in/tylerleite">[me]</a></li>
-		</ul></nav>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+	<!-- Bootstrap template files -->
+  	<link href="css/carousel.css" rel="stylesheet">
+	<link href="css/navbar.css" rel="stylesheet">
+
+	<!-- Color Scheme -->
+	<link href="css/lavish-bootstrap.css">
+
+	<!-- Things I done -->
+	<link href="css/style.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
+	<link href="css/home.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+	  <!-- Fixed navbar -->
+     <nav class="navbar navbar-default navbar-fixed-top">
+       <div class="container">
+         <div class="navbar-header">
+           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+             <span class="sr-only">Toggle navigation</span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+           </button>
+           <a class="navbar-brand" href="#">ATK Farm</a>
+         </div>
+         <div id="navbar" class="navbar-collapse collapse">
+           <ul class="nav navbar-nav">
+             <li class="active"><a href="#">Home</a></li>
+             <li><a href="#about">About</a></li>
+             <li><a href="#contact">Contact</a></li>
+             <li class="dropdown">
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mushroom Info <span class="caret"></span></a>
+               <ul class="dropdown-menu">
+                 <li><a href="#">Shiitake</a></li>
+                 <li><a href="#">Lion's Mane</a></li>
+                 <li><a href="#">Oyster</a></li>
+				 <li><a href="#">Reishi</a></li>
+               </ul>
+             </li>
+			 <li class="dropdown">
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recipes <span class="caret"></span></a>
+               <ul class="dropdown-menu">
+			     <li class="dropdown-header">Mushroom Recipes</li>
+                 <li><a href="#">Hors d'oeuvre</a></li>
+                 <li><a href="#">Breakfast</a></li>
+                 <li><a href="#">Fried Mushroom</a></li>
+				 <li><a href="#">Soups</a></li>
+                 <li role="separator" class="divider"></li>
+                 <li class="dropdown-header">Microgreen Recipes</li>
+                 <li><a href="#">Salads</a></li>
+				 <li><a href="#">Breakfast</a></li>
+                 <li><a href="#">Wraps</a></li>
+				 <li><a href="#">Soups</a></li>
+               </ul>
+             </li>
+			 <li><a href="#contact">Gallery</a></li>
+           </ul>
+           <!--ul class="nav navbar-nav navbar-right">
+             <li><a href="#">Default</a></li>
+             <li><a href="#">Static top</a></li>
+             <li class="active"><a href="#">Fixed top <span class="sr-only">(current)</span></a></li>
+		 </ul-->
+         </div><!--/.nav-collapse -->
+       </div>
+     </nav>
+
+	<!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active carousel-1">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1 class="noselect stroke-text">Ambitious</h1>
+              <p class="noselect stroke-text">ATK Farms provides organic gourmet mushrooms and medicinal mushrooms, grown locally and holistically.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">More Info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item carousel-2">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1 class="noselect stroke-text">Nutritious</h1>
+              <p class="noselect stroke-text">Condensed into every microgreen is all the flavor and nutrition of the full-grown plant. They are praised for their freshness and taste.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item carousel-3">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1 class="noselect stroke-text">Delicious</h1>
+              <p class="noselect stroke-text">Learn how to prepare delicious, healthy, gourmet dishes with our organic mushrooms and microgreens.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">See Recipes</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+
+
+    <!--  Featured articles
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+	<div class="container about">
+		<h1 class="heading">ATK Farms, It's Only Natural</h1>
+		<p class="pgraph">ATK is a suburban, sustainable farm that grows microgreens, herbs, and both gourmet and medicinal mushrooms all year round. We believe in minimizing waste and utilizing our resources to their maximum potential through all lifestyles from permaculture to holistic farming.</p>
 	</div>
-	<div id="fake-header"></div>
-	<div class="title-wrapper dark-bg">
-		<div class="title">
-			<p class="h1 fade-in">Tyler</p>
-			<p class="h2 fade-in-slow">A similar kind of computer programmer.</p>
-			<p class="h3 fake-link noselect fade-in-slower" id="scroll-1">[begin]</p>
-		</div>
-	</div>
-	<div id="content" class="content">
-		<div class="title-wrapper-small">
-			<div class="title fade-in fade-pause">
-				<p class="h1">this is a website.</p>
-			</div>
-		</div>
-		<p class="fade-in fade-pause">This is a website. Well, not really at this point. It'll come along though. Eventually. I even have things to put up, it's just a matter of cleaning everything up. I wouldn't want to be embarassed by sloppy code on my portfolio website, now would I? Anyway, I know I don't have a link here yet, which means you had to use some shenanigans to get here. Something like typing in the URL, or navigating here from my GitHub profile. Maybe you just took the URL from my resume and thought "Hey, <a class="hidden_link" target="_blank" href="http://i.imgur.com/oTDdyJV.jpg">this guy</a> is really cool and <a class="hidden_link" target="_blank" href="http://i.imgur.com/oTDdyJV.jpg">handsome</a>! I wonder what else this <a class="hidden_link" target="_blank" href="http://i.imgur.com/oTDdyJV.jpg">dashing young man</a> has created...". At any rate, you put in effort, real effort, to get here. And what is there to show for it? Nothing. How embarassing for me, right? I really wouldn't want to disappoint you like that. I mean, we only just met! And honestly, I hate to give a bad first impression. So here, I guess I'll give you a sneak peak at something I've been tinkering with.</p>
-		<p class="fade-in fade-pause">It's a random text generator. Basically, it takes a bunch of phonemes (the building blocks of words) and puts them together mostly randomly. By this method, it builds up a vocabulary and stores it in a "dictionary". It then picks words randomly from this dictionary and separates them with periods (full-stops) and commas (probably half-stops, maybe a little less). Behind the scenes, there are a bunch of variables that control things like average syllable count and lexical density. These variables make up a genome of sorts. The code that I have written so far is a set of instructions for how to express that genome. Big picture, this is going to be part of a project where I analyze text from a bunch of different languages to create a "genotype pool" and then make hybrid and imitation languages like some kind of mad scientist.</p>
 
-		<p class="button separate-bg"><span id="gen" class="button-real noselect">[generate]</span> 255 words of text</p>
+	<hr class="sep">
 
-		<p id="random-text" class="fade-in fade-pause">No text has been generated yet, but I'm sure you can figure out how to do it. Feel free to take your time though, no pressure.</p>
+    <div class="container marketing">
+		<center><h1 class="title"> Featured Articles</h1></center>
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="" style="border: 1px solid black;" src="http://www.coloradomushrooms.com/images/supporting/coral.jpg" alt="" width="200" height="200">
+          <h2>Dogs and Mushrooms and Gardens</h2>
+          <p>I bumped into a discussion on an organic gardening Internet list about mushrooms...</p>
+          <p><a target="_blank" class="btn btn-default" href="http://www.coloradomushrooms.com/article_detail.php?id=1" role="button">Full Article &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="" style="border: 1px solid black;" src="http://images.media-allrecipes.com/userphotos/250x250/922698.jpg" alt="" width="200" height="200">
+          <h2>Superb Sauateed Mushrooms</h2>
+          <p>"These mushrooms are the quintessential topping for all types of steak.""</p>
+          <p><a target="_blank" class="btn btn-default" href="http://allrecipes.com/recipe/222795/superb-sauteed-mushrooms/" role="button">Full Article &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img style="border: 1px solid black;" src="http://i.imgur.com/0FBMp9z.jpg" alt="Generic placeholder image" width="200" height="200">
+          <h2>Slow Tools for Small-Scale Farming</h2>
+          <p>Farmers and engineers are joining forces to create the necessary tools...</p>
+          <p><a target="_blank" class="btn btn-default" href="http://www.permaculture.co.uk/articles/slow-tools-small-scale-farming" role="button">Full Article &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
 
-	</div>
-</div>
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2015 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
 
-<script>
-// Generate text
-var generated = false;
-function newText() {
-	var syllables = '11111111222222222222222222222222333333333333333344456'.split("");
-	var dict = createDictionary(syllables);
-	var text = genText(255, dict);
+    </div><!-- /.container -->
 
-	var rt = document.getElementById("random-text");
-	rt.innerHTML = text;
 
-	generated = true;
-}
-
-// Fancy professional web designer
-// You could do this with jquery, but it would be worse in every way
-window.onscroll = (function () {
-	// No website is complete without a floating nav bar
-	var amt_scrolled = window.scrollY;
-	var nav = document.getElementById("header");
-	//nav.style.top = amt_scrolled.toString() + "px";
-
-	if (amt_scrolled > 0) {
-		nav.style.position = "fixed";
-		nav.style.width = "100%";
-		nav.style.top = 0;
-	} else {
-		nav.style.position = "static";
-	}
-
-	// You also need to make things fade in, so they know you're legit
-	var els = document.getElementsByClassName("fade-in");
-	for (var i = 0; i < els.length; i++) {
-		var el_top = els[i].getBoundingClientRect().top;
-		var win_bot = window.innerHeight;
-
-		if (win_bot >= el_top) {
-			if (els[i].classList.contains('fade-pause')){
-				els[i].classList.remove('fade-pause');
-			}
-		}
-	}
-});
-
-// Scroll to text
-function smoothScroll(id) {
-	// Start at the screen's current y position
-    var start = document.body.scrollTop;
-
-	// This is where we're scrolling
-	var el = document.getElementById(id);
-
-	// Figure out where to stop
-	var stop = el.offsetTop;
-	var crawl = el;
-	while (crawl.offsetParent && crawl.offsetParent != document.body){
-		crawl = crawl.offsetParent;
-		stop += crawl.offsetTop;
-	}
-
-	// Small distances, just jump there
-    var distance = Math.abs(start - stop);
-    if (distance < 100) {
-        scrollTo(0, stop);
-		return;
-    }
-
-	// This makes it smooth
-	var speed = 10;
-    var inc = Math.round(distance / speed); // velocity
-    if (inc >= 20){
-		inc = 20; // Don't let the scroll get choppy
-	}
-
-    var dx = Math.round(distance / 25);
-    var pos = stop > start ? start + dx : start - dx;
-    var timer = 0;
-
-    if (stop > start) {
-        for (var i = start; i < stop; i += dx) {
-			timer += 1;
-            setTimeout("window.scrollTo(0, " + pos + ")", timer * inc);
-            pos += dx;
-			if (pos > stop) {
-				pos = stop; timer++;
-			}
-        }
-    } else {
-	    for (var i = start; i > stop; i -= dx) {
-			timer += 1;
-	        setTimeout("window.scrollTo(0, " + pos + ")", timer * v);
-	        pos -= dx;
-			if (pos < stop) {
-				pos = stop; timer++;
-			}
-	    }
-	}
-}
-
-var scroll_1 = document.getElementById("scroll-1");
-scroll_1.onclick = (function () {
-	smoothScroll("content");
-});
-
-var scroll_2 = document.getElementById("gen");
-scroll_2.onclick = (function () {
-	//smoothScroll("random-text");
-	newText();
-});
-
-var pc = 0;
-var instructions = [
-	"It's really not that hard, give it a good think.",
-	"I don't get it, it's really not that hard.",
-	"It is physically painful for me to see you struggling with this.",
-	"If you need a hint, try looking at the \"generate\" button.",
-	"It's right there, just above this text.",
-	"You can tell it apart from the rest of the page because it has a black background.",
-	"It looks a lot like this -> [generate]",
-	"If you ask me, clicking that button would surely be helpful.",
-	"...",
-	"Are you serious right now?",
-	"No, you can't be serious. No one could be serious about this.",
-	"You're serious aren't you?",
-	"How did you even get here. Like seriously, the generate button is right there. If you can't find that I am genuinely curious how you got here.",
-	"You know what? I actually want to know how you managed to find your way here. Here's my email: tyler.leite@yandex.com",
-	"You do know how to send an email, right?",
-	"I should have known.",
-	"All right, I'm just going to click if for you, ok?",
-	"This is your last chance to figure it out for yourself.",
-	"Well \"figure it out\" is putting it nicely. Like I legit gave you the answer.",
-	"But whatever, I'm gonna help you out here. Because I care about you.",
-	"Text changing in 3",
-	"Text changing in 2",
-	"Text changing in 1"
-];
-
-function instruct() {
-	if (generated) {
-		return;
-	}
-
-	if (pc == instructions.length) {
-		newText();
-	} else {
-		var text = document.getElementById("random-text");
-		text.innerHTML = instructions[pc];
-		pc += 1;
-
-		if (pc > instructions.length - 3) {
-			setTimeout(instruct, 1000);
-		} else {
-			setTimeout(instruct, 8000);
-		}
-	}
-}
-
-setTimeout(instruct, 180000);
-
-</script>
-</body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
