Added stroke to credit text

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div id="hoverText" class="hovertext noselect stroke-text">Tyler Leite</div>
-        <div id="credits">Background image by <a target="_blank" href="https://unsplash.com/@titi_wanderer">Thung Vo</a></div>
+        <div class="stroke-text" id="credits">Background image by <a target="_blank" href="https://unsplash.com/@titi_wanderer">Thung Vo</a></div>
     </div>
 
     <script src="js/logotext.js"></script>
