Added mobile version

--- a/resume.html
+++ b/resume.html
@@ -1,100 +1,18 @@
-<head><style>
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
+<!DOCTYPE html>
 
-body {
-    background-position: top center;
-    font-size: 87.5%;
-    font-family: Arial, 'Lucida Sans Unicode';
-    line-height: 18px;
-    text-align: left;
-    width: auto !important;
-    min-width: 675px;
-    /*background: #eee;*/
-    overflow-y: scroll;
+<html>
 
-}
+<head>
 
-.wrapper {
-    /*background-image: url('../img/bg.png');*/
-    /*background: #eee;*/
-    margin: 0 auto;
-    width: 100%;
-    clear: both;
-    overflow: hidden;
-}
+    <title>Tyler Leite</title>
+    <link rel="stylesheet" type="text/css" href="./css/resume.css">
 
-p {
-    font-family: verdana;
-    color: #333;
-}
-
-#resumeBody {
-    width: 85%;
-    margin: 0% auto;
-    padding: 0 0 1% 0;
-    /*background-color: rgba(255,255,255,0.9);*/
-    border-radius: 0 0 5px 5px;
-    -moz-border-radius: 0 0 5px 5px;
-    -webkit-border-radius: 0 0 5px 5px;
-}
-
-#name {
-    margin-top: 5%;
-    text-align: center;
-    font-size: 36;
-    display: block;
-    margin-bottom: 2%;
-}
-
-#contact {
-    text-align: center;
-}
-
-.title {
-}
-
-.body {
-    margin-left: 5%;
-    margin-bottom: 2%;
-}
-
-hr {
-    border: 0;
-    height: 1px;
-    background: #333; 
-    background-image: linear-gradient(to right, #333, #333, #ccc);
-    width: 55%;
-    display: inline-block;
-}
-
-.midAlign {
-    text-align: center;
-}
-
-hr.midHR {
-    background-image: linear-gradient(to right, #ccc, #333, #ccc);
-    width: 75%;
-}
-
-hr.fullHR {
-    background-image: linear-gradient(to right, #222, #333, #222);
-    width: 85%;
-}
-
-</style></head>
-
+</head>
+<body>
 <div id="wrapper"><div id="resumeBody">
     <div id="name"><p>Tyler Leite</p></div>
     <div class="midAlign"><hr class="fullHR"></div>
-    <div id="contact"><p> tyler.leite@yandex.com | 41 Botsford Ave, Milford, CT 06460 | (203) 767 - 8573 </p></div>
+    <div id="contact"><p id="hid"></p></div>
     <div class="midAlign"><hr class="midHR"></div><br>
     
     <div class="body"><p>4+ years of experience programming in many languages both professionally and as a hobby. Expert in UI/UX design. Comfortable working with a team, both as a member and a leader.</p></div><br>
@@ -135,3 +53,5 @@ hr.fullHR {
         </ul></div><br>
    
 </div></div>
+</body>
+</html>
