--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="./css/home/normalize.css">
-    <link rel="stylesheet" type="text/css" href="./css/home/home.css">
+    <link rel="stylesheet" type="text/css" href="./css/home/style.css">
     <!--link rel="stylesheet" type="text/css" href="./css/mobile.css"-->
 
     <link rel="icon" type="image/png" href="./img/favicon.png">
