--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
 
     <!-- Considered these fonts before deciding on Source Code Pro -->
     <!--link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
