--- a/home.html
+++ b/home.html
@@ -42,9 +42,9 @@
                 <div id="logo-box-3" class="logo-box">
                     <span><a target="_blank" href="https://github.com/TylerLeite"><i class="fa fa-github" aria-hidden="true"></i></a></span>
                 </div>
-                <!--div id="logo-box-4" class="logo-box">
-                    <span><a href="#portfolio"><i class="fa fa-briefcase" aria-hidden="true"></i></a></span>
-                </div-->
+                <div id="logo-box-4" class="logo-box">
+                    <span><a target="_blank" href="gist.github.com/tylerleite"><i class="fa fa-briefcase" aria-hidden="true"></i></a></span>
+                </div>
             </div>
         </div>
         <div id="hoverText" class="hovertext noselect stroke-text">Tyler Leite</div>
