added portfolio link

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                     <span><a target="_blank" href="https://github.com/TylerLeite"><i class="fa fa-github" aria-hidden="true"></i></a></span>
                 </div>
                 <div id="logo-box-4" class="logo-box">
-                    <span><a target="_blank" href="gist.github.com/tylerleite"><i class="fa fa-briefcase" aria-hidden="true"></i></a></span>
+                    <span><a target="_blank" href="https://gist.github.com/tylerleite"><i class="fa fa-briefcase" aria-hidden="true"></i></a></span>
                 </div>
             </div>
         </div>
