--- a/portfolio.html
+++ b/portfolio.html
@@ -4,21 +4,33 @@
 <head>
   <meta lang="en-us">
   <meta charset="utf-8">
-  
+
   <title>Tyler Leite's Portfolio</title>
+
+  <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+
+  <link rel="stylesheet" href="css/home/normalize.css"></link>
+  <link rel="stylesheet" href="css/home/style.css"></link>
+  <link rel="stylesheet" href="css/home/portfolio.css"></link>
+
+  <link rel="icon" type="image/png" href="./img/favicon.png">
 </head>
 
 <body>
-  <ul style="list-style:none">
+  <div class="content">
+    <p>The following is a list of some of the projects I have done over the years. Some websites are no longer live on the internet, so I posted links to the code on github in place of live links.</p>
+  </div>
+
+  <ul class="portfolio-list" style="list-style:none">
     <li class="header">Web Development</li>
-    <li><a href="http://atkfarms.com/" target="_blank">ATK Farm</a></li>
-    <li><a href="https://github.com/TylerLeite/oppARTunity" target="_blank">oppARTunity</a></li>
+    <li class="link"><a href="http://atkfarms.com/" target="_blank">ATK Farm</a></li>
+    <li class="link"><a href="https://github.com/TylerLeite/oppARTunity" target="_blank">oppARTunity</a></li>
     <li class="header">Web Development, CMS (WordPress, Wix)</li>
-    <li><a href="http://igoville.com/" target="_blank">Igo Eyewear</a></li>
-    <li><a href="http://www.thewrightwayacademy.org/" target="_blank">The Wright Way Academy</a></li>
+    <li class="link"><a href="http://igoville.com/" target="_blank">Igo Eyewear</a></li>
+    <li class="link"><a href="http://www.thewrightwayacademy.org/" target="_blank">The Wright Way Academy</a></li>
     <li class="header">Other Programming</li>
-    <li><a href="https://github.com/Rensselaer-AI-League/GeneralizedGameServer" target="_blank">Generalized Game Server</a></li>
-    <li><a href="https://github.com/TylerLeite/EntitySystem" target="_blank">C++ Component-Aggregation Framework</a></li>
+    <li class="link"><a href="https://github.com/Rensselaer-AI-League/GeneralizedGameServer" target="_blank">Generalized Game Server</a></li>
+    <li class="link"><a href="https://github.com/TylerLeite/EntitySystem" target="_blank">C++ Component-Aggregation Framework</a></li>
   </ul>
 
 </body>
