--- a/home.html
+++ b/home.html
@@ -1,57 +1,32 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta lang="en-us">
+        <meta name="viewport" content="width=device-width">
 
-    <!-- Considered these fonts before deciding on Source Code Pro -->
-    <!--link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'-->
-    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+        <title>Tyler Leite</title>
 
-    <link rel="stylesheet" type="text/css" href="./css/home/normalize.css">
-    <link rel="stylesheet" type="text/css" href="./css/home/style.css">
-    <!--link rel="stylesheet" type="text/css" href="./css/mobile.css"-->
+        <link rel="icon" type="image/png" href="./img/favicon.png">
 
-    <link rel="icon" type="image/png" href="./img/favicon.png">
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-    <script src="https://use.fontawesome.com/0f92278437.js"></script>
+        <link rel="stylesheet" type="text/css" href="./css/normalize.css">
 
-    <title>Tyler Leite</title>
-
-    <script src="js/loadcss.js"></script>
-
-</head>
-
-<body>
-    <div id="body">
-        <div id="version">
-            <a href="?m"><i class="stroke-text fa fa-mobile" aria-hidden="true"></i></a>
-            <a href="?d"><i class="stroke-text fa fa-desktop" aria-hidden="true"></i></a>
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/home.css">
+    </head>
+    <body>
+        <div class="page">
+            <p>Tyler Leite</p>
+            <p style="margin-top: 0">
+                <a target="_blank" href="https://linkedin.com/in/tylerleite"><img class="icon" src="./graphics/icons/linkedin.png"/></a>
+                <a target="_blank" href="https://github.com/TylerLeite"><img class="icon" src="./graphics/icons/github.png"/></a>
+                <a target="_blank" href="resume.html"><img class="icon" src="./graphics/icons/resume.png"/></a>
+                <!--a target="" href="articles.html"><img class="icon" src="./graphics/icons/articles.png"/></a>
+                <a target="" href="games.html"><img class="icon" src="./graphics/icons/games.png"/></a-->
+            </p>
+            <img src="./graphics/portrait.png" class="portrait">
         </div>
-        <div id="diamond">
-            <div id="diamond-logo">
-                <div id="logo-box-1" class="logo-box">
-                    <span><a target="_blank" href="http://tylerleite.github.io/resume"><i class="fa fa-file-text" aria-hidden="true"></i></a></span>
-                </div>
-                <div id="logo-box-2" class="logo-box">
-                    <span><a target="_blank" href="https://linkedin.com/in/tylerleite"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></span>
-                </div>
-                <div id="logo-box-3" class="logo-box">
-                    <span><a target="_blank" href="https://github.com/TylerLeite"><i class="fa fa-github" aria-hidden="true"></i></a></span>
-                </div>
-                <div id="logo-box-4" class="logo-box">
-                    <span><a target="_blank" href="https://gist.github.com/tylerleite"><i class="fa fa-briefcase" aria-hidden="true"></i></a></span>
-                </div>
-            </div>
-        </div>
-        <div id="hoverText" class="hovertext noselect stroke-text">Tyler Leite</div>
-        <div id="credits" class="stroke-text">Background image by <a target="_blank" href="https://unsplash.com/@titi_wanderer">Thung Vo</a></div>
-    </div>
-
-    <script src="js/logotext.js"></script>
-</body>
-
+    </body>
 </html>
