--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html >
-<html lang="en">
-	<head>
-		<script>
-			window.location = "http://tylerleite.github.io/home";
-		</script>
-	</head>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset = "utf-8">
+        <script>window.location = "./home.html"</script>
+    </head>
 </html>
