add soundcloud link

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
             <p style="margin-top: 0">
                 <a target="_blank" href="https://linkedin.com/in/tylerleite"><img class="icon" src="./graphics/icons/linkedin.png"/></a>
                 <a target="_blank" href="https://github.com/TylerLeite"><img class="icon" src="./graphics/icons/github.png"/></a>
+                <a target="_blank" href="https://soundcloud.com/tyler-leite"><img class="icon" src="./graphics/icons/soundcloud.png"/></a>
                 <a target="_blank" href="http://tylerleite.github.io/resume"><img class="icon" src="./graphics/icons/resume.png"/></a>
                 <!--a target="" href="articles.html"><img class="icon" src="./graphics/icons/articles.png"/></a>
                 <a target="" href="games.html"><img class="icon" src="./graphics/icons/games.png"/></a-->
