--- a/resume.html
+++ b/resume.html
@@ -21,8 +21,12 @@
     <div class="title"><p>Experience</p></div>
     <hr>
     <div class="body"><ul>
-        <li><p>
-          OttoQ, 2017 - present<br>
+         <li><p>
+             TeachFX, 2017 - present<br>
+             &emsp;Full stack web development, iOS development. Polymer.js, Node.js, Swift.
+         </li></p>
+         <li><p>
+          OttoQ, 2017<br>
           &emsp;Front-end developement. Polymer.js
         </p></li>
         <li><p>
