--- a/resume.html
+++ b/resume.html
@@ -23,17 +23,17 @@
     <div class="body"><ul>
          <li><p>
              TeachFX, 2017 - present<br>
-             &emsp;Full stack web development, iOS development. Polymer.js, Node.js, Swift.
+             &emsp;Full stack web development, iOS development. Polymer.js, Node.js, MongoDB, Swift.
          </li></p>
          <li><p>
           OttoQ, 2017<br>
-          &emsp;Front-end developement. Polymer.js
+          &emsp;Front-end developement, overhauled the UI and UX to modernize the site, sped up load times by 10x. Polymer.js.
         </p></li>
         <li><p>
-          ATK Farm, 2016<br>
+          A100 Program, Independent Software<br>
           &emsp; Summer 2016 Cohort. Web development apprenticeship with a focus on full-stack. Meteor, Blaze, and Bootstrap</p></li>
         <li><p>ATK Farm, 2016<br>
-          &emsp;Front-end design. HTML, CSS, JavaScript, Bootstrap.
+          &emsp; Front-end design. HTML, CSS, JavaScript, Bootstrap.
         </p></li>
         <li>
           <p>The Wright Cut, 2016 - 2017<br>
@@ -52,7 +52,7 @@
           &emsp;Cofounder and Lead programmer, heading a team of back-end developers and front-end designers for seq-hub.com. HTML, CSS, JavaScript, and PHP.
         </p></li>
         <li><p>CubingWorld, 2014<br>
-          &emsp;Back-end development,  implemented a system for browsing and organizing videos. HTML, CSS, and PHP.
+          &emsp;Back-end development, implemented a system for browsing and organizing videos. HTML, CSS, and PHP.
         </p></li>
         <li><p>
           oppARTunity, 2014<br>&emsp;Back-end developer (PhP), created a program to make mosaics from user-uploaded images for oppartunity.org
@@ -64,9 +64,10 @@
     <div class="body">
         <ul>
             <li><p>5 years of experience with PhP, SQL</p></li>
-            <li><p>Proficient in C++, Python, JavaScript (2-4+ years)</p></li>
-            <li><p>Experienced with openGL and SDL (3 years)</p></li>
-      <li><p>Experienced with ReactJS, Angular, Node / Meteor (1 year)</p></li>
+            <li><p>Proficient in C++, Python, JavaScript (3-5+ years)</p></li>
+            <li><p>Proficient Polymer.js, Node.js (3 years)</p></li>
+            <li><p>Experienced with openGL and SDL (2 years)</p></li>
+            <li><p>Experienced with ReactJS, Angular, Meteor (1 year)</p></li>
             <li><p>Familiar with C, Java, Scheme, C# (1-3 years)</p></li>
             <li><p>Familiar with Unity and Multimedia Fusion 2 game engines</p></li>
             <li><p>Some experience with MIPS assembly language</p></li>
